--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,27 +10,22 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/g1">
-
+        app:layout_constraintBottom_toTopOf="@+id/rootLayout">
 
     </android.support.v7.widget.Toolbar>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/g1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintGuide_percent="0.1"
-        android:orientation="horizontal"
-        />
     <RelativeLayout
+        android:id="@+id/rootLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/g1"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,6 +38,7 @@
         </FrameLayout>
 
         <android.support.design.widget.FloatingActionButton
+            android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:id="@+id/fab"
