--- a/app/src/main/res/layout/fragment_viewfragment.xml
+++ b/app/src/main/res/layout/fragment_viewfragment.xml
@@ -1,6 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/g1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.2"
+        />
+    <TextView
+        android:id="@+id/tvTxNum"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="曲號"
+        app:layout_constraintEnd_toStartOf="@id/g1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tvTxName"
+        />
+    <EditText
+        android:id="@+id/etNum"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="曲號1"
+        app:layout_constraintStart_toEndOf="@id/g1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/etName"
+        />
+    <TextView
+
+        android:id="@+id/tvTxName"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="名稱"
+        app:layout_constraintEnd_toStartOf="@id/g1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTxNum"
+        app:layout_constraintBottom_toTopOf="@id/tvTxSinger"
+        />
+    <EditText
+        android:id="@+id/etName"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="名稱1"
+        app:layout_constraintStart_toEndOf="@id/g1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etNum"
+        app:layout_constraintBottom_toTopOf="@id/etSinger"
+        />
+    <TextView
+        android:id="@+id/tvTxSinger"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="歌手"
+        app:layout_constraintEnd_toStartOf="@id/g1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTxName"
+        app:layout_constraintBottom_toTopOf="@id/tvTxMachine"
+        />
+    <EditText
+        android:id="@+id/etSinger"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="歌手1"
+        app:layout_constraintStart_toEndOf="@id/g1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etName"
+        app:layout_constraintBottom_toTopOf="@id/etMachine"
+        />
+    <TextView
+        android:id="@+id/tvTxMachine"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="機器"
+        app:layout_constraintEnd_toStartOf="@id/g1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTxSinger"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+    <EditText
+        android:id="@+id/etMachine"
+        style="@style/readText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="機器1"
+        app:layout_constraintStart_toEndOf="@id/g1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etSinger"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+</android.support.constraint.ConstraintLayout>
