--- a/app/src/main/res/layout/fragment_readlistfragment.xml
+++ b/app/src/main/res/layout/fragment_readlistfragment.xml
@@ -7,19 +7,20 @@
 
     >
 
-
-    <TextView
-
-        style="@style/readText"
-        android:id="@+id/tvNum"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/tvNumTitle"
-
-        app:layout_constraintEnd_toStartOf="@+id/g2"
-        app:layout_constraintBottom_toTopOf="@id/g1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <android.support.constraint.Guideline
+        android:id="@+id/g3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1"
+        />
+    <android.support.constraint.Guideline
+        android:id="@+id/g4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2"
+        />
     <android.support.constraint.Guideline
         android:id="@+id/g2"
         android:layout_width="0dp"
@@ -27,30 +28,47 @@
         app:layout_constraintGuide_percent="0.5"
         android:orientation="vertical"
         />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/g3"
+        />
+
+    <TextView
+
+        style="@style/readText"
+        android:id="@+id/etNum"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="@string/tvNumTitle"
+
+        app:layout_constraintEnd_toStartOf="@+id/g2"
+        app:layout_constraintTop_toBottomOf="@id/g3"
+        app:layout_constraintBottom_toTopOf="@+id/g4"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         style="@style/readText"
-        android:id="@+id/tvName"
+        android:id="@+id/etName"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/tvNameTitle"
-        app:layout_constraintStart_toEndOf="@+id/g2"
-        app:layout_constraintBottom_toTopOf="@+id/g1"
+        app:layout_constraintStart_toEndOf="@id/etNum"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/g3"
+        app:layout_constraintBottom_toTopOf="@+id/g4" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/g1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintGuide_percent="0.1"
-        android:orientation="horizontal"
-        />
+
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/rv1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/g1"
+        app:layout_constraintTop_toBottomOf="@+id/g4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
