--- a/app/src/main/res/layout/fragment_readlistfragment.xml
+++ b/app/src/main/res/layout/fragment_readlistfragment.xml
@@ -30,6 +30,7 @@
         />
 
     <EditText
+        android:id="@+id/etSearch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
